--- a/cap_07/cap 07.ipynb
+++ b/cap_07/cap 07.ipynb
@@ -601,7 +601,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 60,
+   "outputs": [],
+   "source": [
+    "# A função zip() foi construída visando agregar valores de duas seqências retornando uma tupla.\n",
+    "# Esse tipo de operação é muitoo útil quando estamos querendo fazer loops em mais de uma lista ao mesmo tempo.\n",
+    "# Veja abaixo a forma geral de uso:\n",
+    "\n",
+    "# zip(seq,seq)\n",
+    "\n",
+    "# seq - sequência. Portanto, essa função nos retorna o agrupamento de duas sequências em uma tupla.\n",
+    "# Vale ressaltar que podemos utilizar zip() em duas sequências com números diferentes de elementos, \n",
+    "# no entanto o número de tuplas será igual ao número da sequência de valores."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "outputs": [],
+   "source": [
+    "# veja o exemplo:\n",
+    "# zip([1,2,3,4,5],[6,7,8]) = (1,2)(2,7)(3,8)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "outputs": [],
+   "source": [
+    "# Função zip"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "outputs": [],
+   "source": [
+    "# Lista\n",
+    "L1 = [1,2,3,4,5,6]\n",
+    "L2 = [7,8,9,1,2,3]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "<zip at 0x7f6e0dbb9870>"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 66
+    }
+   ],
+   "source": [
+    "# Unir as listas\n",
+    "zip(L1,L2)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[(1, 7), (2, 8), (3, 9), (4, 1), (5, 2), (6, 3)]"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 67
+    }
+   ],
+   "source": [
+    "list(zip(L1,L2))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "outputs": [],
    "source": [
     "\n"
@@ -609,8 +729,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
+     "name": "#%%\n"
     }
    }
   }
