--- a/cap_07/cap 07.ipynb
+++ b/cap_07/cap 07.ipynb
@@ -724,6 +724,213 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "# o retorno <zip at 0x7f6e0dbb9870> é um interator, por isso precisamos usar a função list() para obter uma lista.\n",
+    "# vamos fazer um exemplo em que os tamanhos das listas são diferentes."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [],
+   "source": [
+    "# Listas tamanhos diferentes\n",
+    "L3 = [1,2,3,4,5]\n",
+    "L4 = [22,11]\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[(1, 22), (2, 11)]"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 2
+    }
+   ],
+   "source": [
+    "list(zip(L3,L4))\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [],
+   "source": [
+    "# Podemos utilizar dicionários dentro da função zip(). Vale lembrar que os argumentos desta função devem ser sequências.\n",
+    "# Como já estudamos, as sequências podem ser de vários tipos: listas, dicionários, tuplas.\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [],
+   "source": [
+    "# Dicionários\n",
+    "d1 = {'a':1, 'b':2, 'c':3, 'd':4}\n",
+    "d2 = {'aa':11, 'bb':22, 'cc':33, 'dd':44}\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[('a', 'aa'), ('b', 'bb'), ('c', 'cc'), ('d', 'dd')]"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 5
+    }
+   ],
+   "source": [
+    "# A função zip() faz a união pelas chaves\n",
+    "list(zip(d1,d2))\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [],
+   "source": [
+    "# se quisermos unir os dicionários pelos valores, devemos fazer o seguinte:\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[(1, 11), (2, 22), (3, 33), (4, 44)]"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 7
+    }
+   ],
+   "source": [
+    "# Unindo valores\n",
+    "list(zip(d1.values(),d2.values()))\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[('a', 11), ('b', 22), ('c', 33), ('d', 44)]"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 8
+    }
+   ],
+   "source": [
+    "# Unindo chaves com valores\n",
+    "list(zip(d1,d2.values()))\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [],
+   "source": [
+    "# A função zip() é muito utilizada em processos de permutação de valores entre listas e dicionários. Essa é uma \n",
+    "# atividade rotineira de um cientista de dados.\n",
+    "\n",
+    "# Veja abaixo um exemplo de função que faz a troca de valores entre dois dicionários.\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Dicionários\n",
+    "d1 = \n",
+    "\n",
+    "\n",
     "\n"
    ],
    "metadata": {
@@ -736,9 +943,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python37464bitbaseconda31ebb73e55d24b9f8975dabe92e907d7",
-   "display_name": "Python 3.7.4 64-bit ('base': conda)",
-   "language": "python"
+   "name": "python3",
+   "language": "python",
+   "display_name": "Python 3"
   },
   "language_info": {
    "mimetype": "text/x-python",
