--- a/cap_07/cap 07.ipynb
+++ b/cap_07/cap 07.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "# O mundo do cientista de dados é repleto de atividades de transformações de dados\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "# Essas funções estão otimizadas e permitem que analistas executem suas atividades com grande desempenho\n",
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "# A programação orientada a expressão funcional é orientada a expressão que precisam \n",
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "# Sempre que possivel vale a pena evitar o uso de 'loop for'.\n",
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "outputs": [],
    "source": [
     "# Vamos a um exemplo prático.\n",
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "# Função para cálculo do preço da corrida\n",
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "outputs": [],
    "source": [
     "# Listas de distância percorridas\n",
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "outputs": [],
    "source": [
     "# Preço das corridas\n",
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 18,
    "outputs": [
     {
      "data": {
@@ -180,7 +180,7 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 39
+     "execution_count": 18
     }
    ],
    "source": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 19,
    "outputs": [],
    "source": [
     "# Desse modo, a função built-in map aplicou a função 'preCorridaTaxi' interativamente\n",
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 20,
    "outputs": [],
    "source": [
     "# Uso de expressões \n",
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 21,
    "outputs": [
     {
      "data": {
@@ -239,7 +239,7 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 42
+     "execution_count": 21
     }
    ],
    "source": [
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 22,
    "outputs": [],
    "source": [
     "# Vamos estudar um exemplo que apresenta o enorme poder que temos nas mãos a partir da função map()."
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 23,
    "outputs": [],
    "source": [
     "# Listas\n",
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 24,
    "outputs": [],
    "source": [
     "soma_listas = list(map(lambda a,b,c: a+b+c, L1,L2,L3))"
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 25,
    "outputs": [
     {
      "data": {
@@ -311,7 +311,7 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 46
+     "execution_count": 25
     }
    ],
    "source": [
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 26,
    "outputs": [],
    "source": [
     "# No caso acima foomos capazes de aplicar ao mesmo tempo uma  função de três variáveis, \n",
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 27,
    "outputs": [],
    "source": [
     "# Assim como a função map() a função reduce() recebe dois argumentos apenas.\n",
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 28,
    "outputs": [],
    "source": [
     "# A função \"reduce()\" apresenta uma particularidade. Embora seja uma função \n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 29,
    "outputs": [],
    "source": [
     "from functools import reduce"
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 30,
    "outputs": [],
    "source": [
     "lista = [1, 2, -3, 4, 5, -9]\n",
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 31,
    "outputs": [
     {
      "data": {
@@ -421,7 +421,7 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 52
+     "execution_count": 31
     }
    ],
    "source": [
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 32,
    "outputs": [],
    "source": [
     "# Vamos entender agora como chegamos ao resultado ZERO mostrado acima.\n",
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 33,
    "outputs": [],
    "source": [
     "# Assim como as função funções map() e reduce(), a função filter() \n",
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 34,
    "outputs": [],
    "source": [
     "# Função para verificar se nº é par\n",
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 35,
    "outputs": [],
    "source": [
     "numeros = [2, 54, 87, 4, 90, 43, 26, 50]"
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 36,
    "outputs": [
     {
      "data": {
@@ -529,7 +529,7 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 57
+     "execution_count": 36
     }
    ],
    "source": [
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 37,
    "outputs": [],
    "source": [
     "# Poderíamos ter utilizado a expressão lambda para obter o mesmo resultado.\n",
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 38,
    "outputs": [
     {
      "data": {
@@ -570,7 +570,7 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 59
+     "execution_count": 38
     }
    ],
    "source": [
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 39,
    "outputs": [],
    "source": [
     "# A função zip() foi construída visando agregar valores de duas seqências retornando uma tupla.\n",
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 40,
    "outputs": [],
    "source": [
     "# veja o exemplo:\n",
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 41,
    "outputs": [],
    "source": [
     "# Função zip"
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 42,
    "outputs": [],
    "source": [
     "# Lista\n",
@@ -672,15 +672,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 43,
    "outputs": [
     {
      "data": {
-      "text/plain": "<zip at 0x7f6e0dbb9870>"
+      "text/plain": "<zip at 0x1d5399eae88>"
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 66
+     "execution_count": 43
     }
    ],
    "source": [
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 44,
    "outputs": [
     {
      "data": {
@@ -705,7 +705,7 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 67
+     "execution_count": 44
     }
    ],
    "source": [
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "outputs": [],
    "source": [
     "# o retorno <zip at 0x7f6e0dbb9870> é um interator, por isso precisamos usar a função list() para obter uma lista.\n",
@@ -730,13 +730,14 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": false
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 46,
    "outputs": [],
    "source": [
     "# Listas tamanhos diferentes\n",
@@ -754,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 47,
    "outputs": [
     {
      "data": {
@@ -762,7 +763,7 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 2
+     "execution_count": 47
     }
    ],
    "source": [
@@ -779,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 48,
    "outputs": [],
    "source": [
     "# Podemos utilizar dicionários dentro da função zip(). Vale lembrar que os argumentos desta função devem ser sequências.\n",
@@ -796,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 49,
    "outputs": [],
    "source": [
     "# Dicionários\n",
@@ -814,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 50,
    "outputs": [
     {
      "data": {
@@ -822,7 +823,7 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 5
+     "execution_count": 50
     }
    ],
    "source": [
@@ -840,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 51,
    "outputs": [],
    "source": [
     "# se quisermos unir os dicionários pelos valores, devemos fazer o seguinte:\n"
@@ -855,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 52,
    "outputs": [
     {
      "data": {
@@ -863,7 +864,7 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 7
+     "execution_count": 52
     }
    ],
    "source": [
@@ -880,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 53,
    "outputs": [
     {
      "data": {
@@ -888,7 +889,7 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 8
+     "execution_count": 53
     }
    ],
    "source": [
@@ -905,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 54,
    "outputs": [],
    "source": [
     "# A função zip() é muito utilizada em processos de permutação de valores entre listas e dicionários. Essa é uma \n",
@@ -924,13 +925,253 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "outputs": [],
    "source": [
     "# Dicionários\n",
-    "d1 = \n",
+    "d1 = {'a':1, 'b':2, 'c':3, 'd':4}\n",
+    "d2 = {'aa':11, 'bb':22, 'cc':33, 'dd':44}"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "outputs": [],
+   "source": [
+    "# Troca de valores entre dois dicionários\n",
+    "def trocadevaloresDicionarios(da,db):\n",
+    "    dicAux = {}\n",
+    "    for dakey, dbkey in zip(da,db.values()):\n",
+    "        dicAux[dakey] = dbkey\n",
+    "        \n",
+    "    return dicAux"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'a': 11, 'b': 22, 'c': 33, 'd': 44}"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 57
+    }
+   ],
+   "source": [
+    "trocadevaloresDicionarios(d1, d2)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Função Enumerate"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [],
+   "source": [
+    "# A função # enumerate # fornece os índices de cada valorem sequência. Assim # enumerate () retorna uma tupla com o\n",
+    "# formato:  tupla( índice, valor).\n",
     "\n",
+    "# A função enumerate() recebe apenas um parâmetro que é exatamente a sequência que queremos retornar o par índice valor.\n",
+    "# Ver caso geral abaixo:\n",
     "\n",
+    "# enumerate(seq)\n",
+    "\n",
+    "# Quando uma sequência tiver valores não numéricos, é bem mais fácil fazer a manipulação a partir dos índices da \n",
+    "# sequência. \n",
+    "\n",
+    "# Veja abaixo:"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [],
+   "source": [
+    "# Cria um sequência\n",
+    "seq = ['a', 'b', 'c', 'd']"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "<enumerate at 0x22dc0dae458>"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 3
+    }
+   ],
+   "source": [
+    "enumerate(seq)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[(0, 'a'), (1, 'b'), (2, 'c'), (3, 'd')]"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 4
+    }
+   ],
+   "source": [
+    "list(enumerate(seq))\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [],
+   "source": [
+    "# A partir dos índices podemos fazer opereções lógicass e matemáticas com maiss controle uma vez que muitass vezes não \n",
+    "# sabemos quais elementos estão na sequência.\n",
+    "\n",
+    "# Para terminar o cpítulo, vamos fazer um exemplo para encontrar os valores da sequência onde os índices são menoress do\n",
+    "# que determinado valor k.\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [],
+   "source": [
+    "# Função para encontrar elementos de sequências com índices menores do que k\n",
+    "def listaElementosIndiceMenoresQue(seq,k):\n",
+    "    for indice, valor in enumerate(seq):\n",
+    "        if indice > k:\n",
+    "            break\n",
+    "        else:\n",
+    "            print(valor)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [],
+   "source": [
+    "# Criar uma sequência\n",
+    "seq = ['casa', 'mesa', 'elevador', 'porta']"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "casa\n",
+      "mesa\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "listaElementosIndiceMenoresQue(seq, 1)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "\n"
    ],
    "metadata": {
