--- a/cap_07/cap 07.ipynb
+++ b/cap_07/cap 07.ipynb
@@ -1145,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
@@ -1157,27 +1157,13 @@
     }
    ],
    "source": [
-    "listaElementosIndiceMenoresQue(seq, 1)\n"
+    "listaElementosIndiceMenoresQue(seq, 1)"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n",
      "is_executing": false
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
     }
    }
   }
