--- a/cap_09/cap_09.ipynb
+++ b/cap_09/cap_09.ipynb
@@ -769,10 +769,324 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [
+    {
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-6fcda996f26e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Classe PessoaFísica herda da classe Pessoa\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mclass\u001b[0m \u001b[0mPessoaFisica\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mPessoa\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m     \u001b[1;31m# Construtor para classe pessoa fisica\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mCPF\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnome\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0midade\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[1;31m# importa característica da classe Pessoa\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'Pessoa' is not defined"
+     ],
+     "ename": "NameError",
+     "evalue": "name 'Pessoa' is not defined",
+     "output_type": "error"
+    }
+   ],
+   "source": [
+    "# Classe PessoaFísica herda da classe Pessoa\n",
+    "class PessoaFisica(Pessoa):\n",
+    "    # Construtor para classe pessoa fisica\n",
+    "    def __init__(self, CPF, nome, idade):\n",
+    "        # importa característica da classe Pessoa\n",
+    "        super().__init__(nome,idade)\n",
+    "        self.CPF = CPF\n",
+    "        \n",
+    "    # pessoas fisicas possuem cpf\n",
+    "    def setCPF(self, CPF):\n",
+    "        self.CPF = CPF\n",
+    "        \n",
+    "    def getCPF(self):\n",
+    "        return self.CPF"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [],
+   "source": [
+    "# O método \"super()\" faz a coleta dos atributos da super-classe( classe pai) que no nosso caso é a classe pessoa.\n",
+    "# Com isso, utilizamos o \"super().__init__(nome,idade)\" para criar um construtor com parâmetros da classe pais.\n",
+    "\n",
+    "# Note que temos para a clases \"PessoaFisica\" os mesmos métodos da classe \"Pessoa\" tem atributos e métodos comuns \n",
+    "# para \"PessoaFísica\" e \"PessoaJuridica\"."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Métodos especiasi em Python"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [],
+   "source": [
+    " \n",
+    " # Até o presente momento fizemosn uso de apenas um método especial em Python que foi o __init__. \n",
+    "# No entanto, o Python apresenta um grande número desses metodos que nos permitem executar ações específicas.\n",
+    "# Veja abaixo alguns dos principais métodos especiais em Python.\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [
+    {
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-6-cf53bc8e469c>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    __abs__     __delattr__     __getattribute__        __index__\u001b[0m\n\u001b[1;37m                          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ],
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-6-cf53bc8e469c>, line 1)",
+     "output_type": "error"
+    }
+   ],
+   "source": [
+    "'''\n",
+    "__abs__     __delattr__     __getattribute__        __index__\n",
+    "__add__     __delete__      __getittem__  e etc... \n",
+    "'''"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [],
+   "source": [
+    "# Note que identificamos um método especial pelos dois underscores(__) antes e após seu nome. \n",
+    "# Vale lembrarque underline é diferente de underscore. \"Underline\" significa um sublinhado. \n",
+    "# Por outro lado, o  \"Underscore\" é traço inferior utilizado para separa palavras por exemplo. \n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [],
+   "source": [
+    "# Criar classe\n",
+    "class Filme():\n",
+    "    def __init__(self, titulo, diretor, duracao):\n",
+    "        print(\"Filme criado\")\n",
+    "        self.titulo = titulo\n",
+    "        self.diretor = diretor\n",
+    "        self.duracao = duracao\n",
+    "        \n",
+    "    def __str__(self):\n",
+    "        # usamos a contra barra '\\' para continuar o comando na proxima linha!\n",
+    "        return \"Filme %s, Diretor: %s, Duração (min): %s\"\\\n",
+    "               %(self.titulo, self.diretor, self.duracao)\n",
+    "    \n",
+    "    def __len__(self): # este é um método especial modificado\n",
+    "        return  self.duracao\n",
+    "    \n",
+    "    def len(self): # este nós estamos criando\n",
+    "        return print(\"Duração do filme em minutos: \", self.duracao)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "Filme criado\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "filme1 = Filme(\"Sétimo selo\", \"Ingmar Bergman\", 96)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "Filme Sétimo selo, Diretor: Ingmar Bergman, Duração (min): 96\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "# Por causa di método \"__str__\" iremos ter uma resposta de texto:\n",
+    "print(filme1)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'Filme Sétimo selo, Diretor: Ingmar Bergman, Duração (min): 96'"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 6
+    }
+   ],
+   "source": [
+    "# Chamar a função especial\n",
+    "str(filme1)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "96"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 7
+    }
+   ],
+   "source": [
+    "# Usar o método especial modificado por nós:\n",
+    "len(filme1)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "96"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 8
+    }
+   ],
+   "source": [
+    "# Usar o método len() criado por nós\n",
+    "len(filme1)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "Duração do filme em minutos:  96\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "filme1.len()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [
-    "\n"
+    "# Vale ressaltar que vimos apenas o básico introdutório desse campo tão vasto e importante.\n",
+    "# Para que você possa se aprofundar e utilizar com mais confiança a POO certamente precisará  de leitura de \n",
+    "# materiais avançados. Para isso é extremamente aconselhável a leitura do excelente e completo livro: Python Fluente.\n"
    ],
    "metadata": {
     "collapsed": false,
